<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">物流管家</string>
    <string name="menu_index">首页</string>
    <string name="menu_receive">快件揽收</string>
    <string name="menu_deliver">快件派送</string>
    <string name="menu_unpack">包裹拆包</string>
    <string name="menu_pack">包裹打包</string>
    <string name="menu_receive_pacakge">包裹揽收</string>
    <string name="menu_customermanage">客户管理</string>
    <string name="menu_about">关于</string>
    <string name="menu_receivepkg">接收包裹</string>
    <string name="title_login">登录物流管家</string>
    <string name="title_register">注册物流管家</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">设置</string>
    <string name="action_new">新建</string>
    <string name="action_refresh">刷新</string>
    <string name="action_edit">编辑</string>
    <string name="action_reset">清除</string>
    <string name="action_ok">完成</string>
    <string name="action_login">登录</string>
    <string name="action_logout">退出</string>
    <string name="action_my_package">我的包裹</string>
    <string name="action_my_message">我的消息</string>
    <string name="action_my_location">我的位置</string>
    <string name="title_activity_region_list">选择行政区</string>
    <string name="title_activity_customer_list">客户列表</string>
    <string name="title_activity_customer_edit">客户信息</string>
    <string name="title_name">姓名：</string>
    <string name="title_tel_code">电话：</string>
    <string name="title_addr_code">地址：</string>
    <string name="title_post_code">邮编：</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
    <string name="msg_error">错误</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">1D工业</string>
    <string name="preferences_decode_1D_product_title">1D产品</string>
    <string name="preferences_decode_Aztec_title">阿兹台克人</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
    <string name="preferences_disable_barcode_scene_mode_title">没有条形码的场景模式</string>
    <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">没有持续关注</string>
    <string name="preferences_disable_exposure_title">无曝光</string>
    <string name="preferences_disable_metering_title">无计量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">待用</string>
    <string name="preferences_front_light_on">活跃</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_invert_scan_summary">黑色背景上的白色条形码扫描。在某些设备上。</string>
    <string name="preferences_invert_scan_title">反向扫描</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_orientation_title">没有自动旋转</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="wifi_changing_network">请求连接到网络\u2026</string>
    <string name="title_activity_express_edit">快件信息</string>
    <string name="title_ex_edit1">基本信息</string>
    <string name="title_ex_edit2">扩展信息</string>
    <string name="weather_forecast_title">天气预报</string>
    <string name="weather_forecast_current">实时天气预报</string>
    <string name="weather_forecast_future">未来天气预报</string>
    <string name="location_title">定位</string>
    <string name="location_net_method">网络（基站+WIFI）定位</string>
    <string name="location_mulity_method">混合定位（GPS+网络）</string>
    <string name="location_gps_method">GPS定位（建议室外使用）</string>
    <string name="location_geofence_method">地理围栏（警戒区域提醒）</string>
    <string name="current_weather_report_title">实时天气</string>
     <string name="future_weather_report_title">天气预报</string>
      <string name="net_location_title">网络定位</string>
       <string name="gps_location_title">GPS定位</string>
    
    <string name="weather_location">"地      点："</string>
    <string name="weather_weather">"天      气："</string>
     <string name="weather_temperature">"气      温："</string>
     <string name="weather_wind_direction">"风      向："</string>
    <string name="weather_wind_power">"风      力："</string>
     <string name="weather_air_humidity">空气湿度：</string>
    <string name="weather_weather_publish">发布时间：</string>
    
    <string name="location_latlng">"坐      标："</string>
    <string name="location_accurancy">"精      度："</string>
    <string name="location_method">定位方式：</string>
    <string name="location_time">定位时间：</string>
    <string name="location_description">位置描述：</string>
    <string name="location_country">国&#160;&#160;&#160;&#160;&#160;&#160;家 ：</string>
    <string name="location_province">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;省 ：</string>
    <string name="location_city">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;市   ：</string>
    <string name="location_county">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区 ：</string>
    <string name="location_road">街&#160;&#160;&#160;&#160;&#160;&#160;道   ：</string>
    <string name="location_poi">POI名称 ：</string>
    <string name="location_city_code">城市编码：</string>
    <string name="location_area_code">区域编码：</string>
    
     <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string name="location_des_open_text">是否打开位置信息描述：</string>
    <string name="yes">是</string>
     <string name="no">否</string>
     <string name="geofence_des">点击地图，以点击点为中心建立地理围栏，再次点击地图修改地理围栏位置</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_again">Input your password again</string>
    <string name="register">Register</string>

</resources>