<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.track.ui.misc.CustomerEditActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView"
        android:hint="search regioncode.."
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_edit"/>
    
    <item
        android:id="@+id/action_ok"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_ok"/>

</menu>